--- a/package.json
+++ b/package.json
@@ -8,6 +8,13 @@
 		"start": "next start",
 		"lint": "eslint",
 		"lint:fix": "eslint --fix .",
+		"test": "jest",
+		"test:watch": "jest --watch",
+		"test:coverage": "jest --coverage",
+		"test:e2e": "playwright test",
+		"test:e2e:ui": "playwright test --ui",
+		"test:e2e:debug": "playwright test --debug",
+		"playwright:install": "playwright install --with-deps",
 		"prepare": "node .husky/install.mjs"
 	},
 	"dependencies": {
@@ -18,13 +25,19 @@
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3.3.3",
+		"@playwright/test": "^1.57.0",
 		"@tailwindcss/postcss": "^4",
+		"@testing-library/jest-dom": "^6.9.1",
+		"@testing-library/react": "^16.3.1",
+		"@testing-library/user-event": "^14.6.1",
 		"@trivago/prettier-plugin-sort-imports": "^6.0.0",
+		"@types/jest": "^30.0.0",
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
 		"@typescript-eslint/eslint-plugin": "^8.49.0",
 		"@typescript-eslint/parser": "^8.49.0",
+		"@upstash/context7-mcp": "^1.0.31",
 		"autoprefixer": "^10.4.23",
 		"eslint": "^9",
 		"eslint-config-next": "16.0.10",
@@ -35,6 +48,8 @@
 		"eslint-plugin-tailwindcss": "^3.18.2",
 		"eslint-plugin-unicorn": "^62.0.0",
 		"husky": "^9.1.7",
+		"jest": "^30.2.0",
+		"jest-environment-jsdom": "^30.2.0",
 		"lint-staged": "^16.2.7",
 		"prettier": "^3.7.4",
 		"prettier-plugin-tailwindcss": "^0.7.2",
