--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
 		"prepare": "node .husky/install.mjs"
 	},
 	"dependencies": {
+		"@radix-ui/react-separator": "^1.1.8",
+		"@radix-ui/react-slot": "^1.2.4",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.561.0",
 		"next": "16.0.10",
+		"next-intl": "^4.6.1",
 		"next-themes": "^0.4.6",
 		"react": "19.2.1",
 		"react-dom": "19.2.1",
+		"react-icons": "^5.5.0",
 		"sharp": "^0.34.5"
 	},
 	"devDependencies": {
