--- a/package.json
+++ b/package.json
@@ -18,17 +18,18 @@
 		"prepare": "node .husky/install.mjs"
 	},
 	"dependencies": {
-		"@radix-ui/react-separator": "^1.1.8",
-		"@radix-ui/react-slot": "^1.2.4",
+		"@base-ui/react": "^1.0.0",
+		"@tanstack/react-query": "^5.68.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
-		"lucide-react": "^0.561.0",
+		"lucide-react": "^0.562.0",
 		"next": "16.0.10",
 		"next-intl": "^4.6.1",
 		"next-themes": "^0.4.6",
 		"react": "19.2.1",
 		"react-dom": "19.2.1",
 		"react-icons": "^5.5.0",
+		"shadcn": "^3.6.2",
 		"sharp": "^0.34.5"
 	},
 	"devDependencies": {
@@ -45,7 +46,6 @@
 		"@types/react-dom": "^19",
 		"@typescript-eslint/eslint-plugin": "^8.49.0",
 		"@typescript-eslint/parser": "^8.49.0",
-		"@upstash/context7-mcp": "^1.0.31",
 		"autoprefixer": "^10.4.23",
 		"eslint": "^9",
 		"eslint-config-next": "16.0.10",
@@ -70,7 +70,7 @@
 	},
 	"lint-staged": {
 		"*.{ts,tsx}": [
-			"pnpm lint:fix"
+			"eslint --fix"
 		]
 	}
 }
