--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	},
 	"dependencies": {
 		"@base-ui/react": "^1.0.0",
+		"@hookform/resolvers": "^5.2.2",
 		"@tanstack/react-query": "^5.68.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
@@ -28,9 +29,11 @@
 		"next-themes": "^0.4.6",
 		"react": "19.2.1",
 		"react-dom": "19.2.1",
+		"react-hook-form": "^7.69.0",
 		"react-icons": "^5.5.0",
 		"shadcn": "^3.6.2",
-		"sharp": "^0.34.5"
+		"sharp": "^0.34.5",
+		"valibot": "^1.2.0"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3.3.3",
