--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
 		"@base-ui/react": "^1.0.0",
 		"@hookform/resolvers": "^5.2.2",
 		"@tanstack/react-query": "^5.68.0",
+		"@uidotdev/usehooks": "^2.4.1",
+		"ahooks": "^3.9.6",
 		"axios": "^1.13.2",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.562.0",
+		"nanoid": "^5.1.6",
 		"next": "16.0.10",
 		"next-intl": "^4.6.1",
 		"next-themes": "^0.4.6",
@@ -35,7 +38,8 @@
 		"shadcn": "^3.6.2",
 		"sharp": "^0.34.5",
 		"sonner": "^2.0.7",
-		"valibot": "^1.2.0"
+		"valibot": "^1.2.0",
+		"zustand": "^5.0.9"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3.3.3",
