--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"next": "16.0.10",
 		"next-intl": "^4.6.1",
 		"next-themes": "^0.4.6",
+		"nextjs-toploader": "^3.9.17",
 		"react": "19.2.1",
 		"react-dom": "19.2.1",
 		"react-hook-form": "^7.69.0",
