--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"axios": "^1.13.2",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"jose": "^6.1.3",
 		"lucide-react": "^0.562.0",
 		"nanoid": "^5.1.6",
 		"next": "16.0.10",
