--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
 		"@typescript-eslint/eslint-plugin": "^8.49.0",
 		"@typescript-eslint/parser": "^8.49.0",
 		"autoprefixer": "^10.4.23",
+		"dotenv": "^17.2.3",
 		"eslint": "^9",
 		"eslint-config-next": "16.0.10",
 		"eslint-config-prettier": "^10.1.8",
